Adding test JRUby script.  some cleanup

--- a/pom.xml
+++ b/pom.xml
@@ -7,23 +7,59 @@
   <version>1.0-SNAPSHOT</version>
   <name>ksb-client</name>
   
+   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
+  <build>
+	<plugins>
+	  <plugin>
+      	<artifactId>maven-assembly-plugin</artifactId>
+      	<version>2.4</version>
+      	<configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+	    <executions>
+	      <execution>
+		    <id>make-assembly</id> <!-- this is used for inheritance merges -->
+		    <phase>package</phase> <!-- bind to the packaging phase -->
+	        <goals>
+	          <goal>single</goal>
+	        </goals>
+	      </execution>
+	    </executions>
+	  </plugin>
+	  <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
   <dependencies>
 	<dependency>
 	    <groupId>org.apache.cxf</groupId>
-	    <artifactId>cxf-rt-frontend-jaxws</artifactId>
-	    <version>2.7.3</version>
+	    <artifactId>cxf-bundle</artifactId>
+	    <version>2.7.10</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.apache.cxf</groupId>
 	    <artifactId>cxf-rt-ws-security</artifactId>
-	    <version>2.7.3</version>
+	    <version>2.7.10</version>
 	</dependency>
 		<dependency>
 	    <groupId>org.apache.cxf</groupId>
 	    <artifactId>cxf-rt-transports-http-jetty</artifactId>
-	    <version>2.7.3</version>
-	    <scope>test</scope>
-	</dependency>
+	    <version>2.7.10</version>
+	    <scope>test</scope> 
+	</dependency> 
 	<dependency>
 	    <groupId>junit</groupId>
 	    <artifactId>junit</artifactId>
