--- a/pom.xml
+++ b/pom.xml
@@ -76,13 +76,13 @@
   <distributionManagement>
     <repository>
       <id>cornell-internal</id>
-      <url>https://maven.cit.cornell.edu/repository/internal/</url>
+      <url>https://nexus.cucloud.net/nexus/content/repositories/cornell-cloud/</url>
     </repository>
     <snapshotRepository>
       <id>cornell-snapshots</id>
       <name>cornell-snapshots</name>
       <uniqueVersion>true</uniqueVersion>
-      <url>https://maven.cit.cornell.edu/repository/snapshots/</url>
+      <url>https://nexus.cucloud.net/nexus/content/repositories/snapshots/</url>
     </snapshotRepository>
   </distributionManagement>
   
